html/css/commentary.css
/* create a var for the heading padding */
:root {
    --heading-padding: 0.5rem;
}

div.commentary_container {
    margin: auto;
    padding-top: 1rem;
}


div.commentary_container * {
    max-width: 45rem;
}


div.commentary_container>div {
    margin-left: auto;
    margin-right: auto;
}

/* headings spacings between sections */

h1 {
    text-indent: var(--default-line-height-negative);
}

/* top-level commentary headings */
h1.main_heading,
h1.sub_heading {
    text-indent: 0;
    padding: var(--heading-padding);
    font-size: 1.5rem;
}

h2 {
    padding: var(--heading-padding);
    margin-top: 2.5rem;
    font-size: 1.25rem;
}

h3 {
    padding: var(--heading-padding);
    font-size: 1rem;
    margin: 0;
}

h4 {
    padding: var(--heading-padding);
    font-size: 1rem;
    margin: 0;
    font-weight: normal;
}

/* h2.no_padding,
h3.no_padding,
h4.no_padding {
    padding-bottom: 0;
    margin-bottom: 0;
} */


div.editorialChapter div.editorialChapter {
    padding-top: 1.5rem;
}

/* indent chapters based on heading level (nesting depth) */
div.commentary_container div.editorialChapter div.editorialChapter {
    margin-left: var(--default-line-height);
}

div.commentary_container div.editorialChapter div.editorialChapter div.editorialChapter {
    margin-left: calc(2 * var(--default-line-height));
}

/* commentary text */

div.commentary_container div.editorialChapter>p {
    text-indent: var(--default-line-height);
    margin: 0;
    padding: 0rem 0.5rem 0.5rem var(--heading-padding);
}

div.commentary_container div.editorialChapter>ul,
div.commentary_container div.editorialChapter>ol,
div.commentary_container div.editorialChapter>dl {
    padding: var(--heading-padding);
}

div.commentary_container div>p:first-of-type {
    text-indent: 0;
    margin: 0;
}

/* overview / structured info at document start */

.commentary_overview {
    margin: 1.5rem 0;
    padding: 1.25rem 1.5rem;
    border-radius: 0.25rem;
    border: 1px solid rgba(var(--bv-big-highlight-rgb), .3);
    background-color: rgba(var(--bv-big-highlight-rgb), .05);
}

.commentary_overview.editorialTable {
    margin-bottom: 0;
}

.commentary_overview+.commentary_overview {
    margin-top: 0.5rem;
}

.commentary_overview dl {
    margin: 0;
}

.commentary_overview dt {
    font-weight: 600;
    margin-top: 0.35rem;
}

.commentary_overview dd {
    margin-left: var(--default-line-height);
}

.commentary_overview dl p {
    padding: 0;
    margin: 0;
}

/* commentary table of contents (fixed left column, toggleable) */

.commentary_toc_toggle {
    display: none;
}

.commentary_toc_toggle_button {
    position: fixed;
    left: 0.75rem;
    top: 7.2rem;
    z-index: 995;
    /* above content but below navbar */
    cursor: pointer;
}

.commentary_toc {
    position: fixed;
    top: 9.7rem;
    left: 0.75rem;
    width: 25rem;
    max-width: 80vw;
    padding: 1rem 1.25rem;
    background-color: var(--bv-main-bg-color);
    border: 1px solid rgba(var(--bv-big-highlight-rgb), .3);
    box-shadow: 2px 0 6px rgba(0, 0, 0, .05);
    z-index: 990;
    overflow-y: auto;
    max-height: calc(100vh - 10rem);
    /* keep TOC fully off-screen when hidden, accounting for left offset */
    transform: translateX(calc(-100% - 0.75rem));
    transition: transform 0.2s ease-in-out;
}

#commentary_toc_toggle:checked~nav.commentary_toc {
    transform: translateX(0);
}

.commentary_toc ul {
    list-style: none;
    padding-left: 0;
    margin: 0;
}

.commentary_toc li {
    margin: 0.15rem 0;
}

/* indent TOC entries based on nesting level */
.commentary_toc>ul>li {
    margin-left: 0;
}

.commentary_toc ul ul {
    margin-left: 0.75rem;
}

.commentary_toc ul ul ul {
    margin-left: 1.5rem;
}

.commentary_toc a {
    display: block;
    font-size: 0.9rem;
    line-height: 1.3;
    text-decoration: none;
}

.commentary_toc a:hover,
.commentary_toc a:focus {
    text-decoration: underline;
}

/* footnotes */

div.footnote_container {
    width: 100%;
    column-count: 2;
    column-gap: 1rem;
    padding: 1rem 0 1rem 0;
    border-top: 0.3rem solid var(--bv-big-highlight);
    margin-top: 6rem;
    margin-bottom: 0;
    padding-top: 2rem
}

div.footnote_container div.footnote {
    padding-right: .5rem;
    /* padding-top: .2rem; */
    padding-top: var(--footnote-top-padding);
    display: flex;
    flex-direction: row;
    padding-bottom: var(--footnote-bottom-padding);
}

div.footnote_container div.footnote_text p {
    font-size: .8rem;
    line-height: var(--footnote-line-height);
    text-indent: var(--footnote-line-height);
}


div.footnote_container div.footnote_text p:first-of-type {
    text-indent: 0;
}

div.footnote_container div.footnote_number {
    min-width: 2rem;
    padding-right: .5rem;
    text-align: end;
}

div.footnote_number a {
    font-size: .8rem;
    line-height: var(--footnote-line-height);
    text-align: end;
    vertical-align: top;
}

div.footnote p {
    padding: 0;
    max-width: 30rem;
}

/* links inside commentary text and notes */
a.footnote_anchor {
    text-decoration: none;
    padding-bottom: var(--footnote-bottom-padding);
}

div.footnote_container div.footnote_text p {
    font-size: .8rem;
    line-height: var(--footnote-line-height);
    text-indent: var(--footnote-line-height);
}


div.footnote_container div.footnote_text p:first-of-type {
    text-indent: 0;
}

div.footnote_container div.footnote_number {
    min-width: 2rem;
    padding-right: .5rem;
    text-align: end;
}

div.footnote_number a {
    font-size: .8rem;
    line-height: var(--footnote-line-height);
    text-align: end;
    vertical-align: top;
}

div.footnote p {
    padding: 0;
    max-width: 30rem;
}

/* links inside commentary text and notes */
a.footnote_anchor {
    text-decoration: none;
}

div.commentary_container div.editorialChapter h1:target,
div.commentary_container div.editorialChapter h2:target,
div.commentary_container div.editorialChapter h3:target,
div.commentary_container div.editorialChapter h4:target {
    background-color: rgba(var(--bv-big-highlight-rgb), .1);
    scroll-margin-top: 100px;
}


@media (max-width: 550px) {
    div.footnote_container {
        column-count: 1;
        column-gap: 1rem;
    }
}

